# RealTimeSystem

./: CMakeLists.txt
.deepseek/: instructions.md
ExampleTask/: funct_command.c  funct_control.c  operate.cpp  simple_tp.c  simple_tp.h  task.c  task.h
hal/: hal.h  hal_core.c  hal_io.c  hal_lib.c  hal_priv.h  hal_rt.c  hal_shmem.c
main/: stubs.cpp  taskmain.cpp
rtapi/: rtapi.h  rtapi_bitops.h  rtapi_common.h  rtapi_mutex.h  rtapi_stdint.h  rtapi_uspace.h  uspace_common.c  uspace_common.h  uspace_rtapi_app.cpp
time/: _timer.cpp  _timer.h  timer.cpp  timer.h
